--- a/index.html
+++ b/index.html
@@ -3,50 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deepan Sivakumar</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Your Name - Personal Website</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f3f3f3;
+            color: #333;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h1, h2 {
+            color: #007bff;
+        }
+
+        .section {
+            margin-bottom: 20px;
+        }
+
+        .section h2 {
+            border-bottom: 2px solid #007bff;
+            padding-bottom: 5px;
+            margin-bottom: 10px;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        ul li {
+            margin-bottom: 5px;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Welcome to My Website</h1>
-            <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <main>
-        <div class="container">
-            <section>
-                <h2>About Me</h2>
-                <p>Hello, I'm Deepan Sivakumar. I am passionate about XYZ and have experience in ABC. Feel free to get in touch with me!</p>
-            </section>
-            <section>
-                <h2>Contact Details</h2>
-                <p>Email: deepanvelu3@gmail.com</p>
-                <p>Phone: +91 70109 11863</p>
-                <p>Location: Coimbatore, Tamilnadu, India</p>
-            </section>
-            <section>
-                <h2>Experience</h2>
-                <p>Include details of your relevant experience here.</p>
-                <ul>
-                    <li>Previous Job Title, Previous Company (Date Range)</li>
-                    <li>Previous Job Title, Previous Company (Date Range)</li>
-                    <!-- Add more experience details as needed -->
-                </ul>
-            </section>
-        </div>
-    </main>
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 Deepan Sivakumar</p>
-        </div>
-    </footer>
+    <div class="container">
+        <header>
+            <h1>Your Name</h1>
+        </header>
+        <section class="section">
+            <h2>Contact Details</h2>
+            <ul>
+                <li>Email: yourname@example.com</li>
+                <li>Phone: +1234567890</li>
+                <li>Address: Your Address, City, Country</li>
+            </ul>
+        </section>
+        <section class="section">
+            <h2>Skills</h2>
+            <ul>
+                <li>Skill 1</li>
+                <li>Skill 2</li>
+                <li>Skill 3</li>
+                <!-- Add more skills as needed -->
+            </ul>
+        </section>
+        <section class="section">
+            <h2>Hobbies</h2>
+            <ul>
+                <li>Hobby 1</li>
+                <li>Hobby 2</li>
+                <li>Hobby 3</li>
+                <!-- Add more hobbies as needed -->
+            </ul>
+        </section>
+    </div>
 </body>
 </html>
