--- a/index.html
+++ b/index.html
@@ -3,80 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Personal Website</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f3f3f3;
-            color: #333;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        h1, h2 {
-            color: #007bff;
-        }
-
-        .section {
-            margin-bottom: 20px;
-        }
-
-        .section h2 {
-            border-bottom: 2px solid #007bff;
-            padding-bottom: 5px;
-            margin-bottom: 10px;
-        }
-
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        ul li {
-            margin-bottom: 5px;
-        }
-    </style>
+    <title>Deepan Sivakumar - Personal Website</title>
+    <link rel="stylesheet" href="styles.css"> <!-- External CSS file for better organization -->
 </head>
 <body>
-    <div class="container">
-        <header>
+    <header>
+        <div class="container">
             <h1>Your Name</h1>
-        </header>
-        <section class="section">
-            <h2>Contact Details</h2>
-            <ul>
-                <li>Email: yourname@example.com</li>
-                <li>Phone: +1234567890</li>
-                <li>Address: Your Address, City, Country</li>
-            </ul>
-        </section>
-        <section class="section">
-            <h2>Skills</h2>
-            <ul>
-                <li>Skill 1</li>
-                <li>Skill 2</li>
-                <li>Skill 3</li>
-                <!-- Add more skills as needed -->
-            </ul>
-        </section>
-        <section class="section">
-            <h2>Hobbies</h2>
-            <ul>
-                <li>Hobby 1</li>
-                <li>Hobby 2</li>
-                <li>Hobby 3</li>
-                <!-- Add more hobbies as needed -->
-            </ul>
-        </section>
-    </div>
+            <p>Web Developer & Designer</p>
+        </div>
+    </header>
+
+    <section id="about" class="section">
+        <div class="container">
+            <h2>About Me</h2>
+            <p>I'm a passionate web developer with expertise in HTML, CSS, and JavaScript. I love creating visually stunning and user-friendly websites.</p>
+        </div>
+    </section>
+
+    <section id="resume" class="section">
+        <div class="container">
+            <h2>Resume</h2>
+            <div class="resume-details">
+                <div class="contact">
+                    <h3>Contact Details</h3>
+                    <p>Email: yourname@example.com</p>
+                    <p>Phone: +1234567890</p>
+                    <p>Address: Your Address, City, Country</p>
+                </div>
+                <div class="skills">
+                    <h3>Skills</h3>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                        <li>Responsive Design</li>
+                        <!-- Add more skills as needed -->
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Deepan Sivakumar. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
