--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <div class="container">
-            <h1>Your Name</h1>
-            <p>Web Developer & Designer</p>
+            <h1>Deepan Sivakumar</h1>
+            <p>DevOps Engineer</p>
         </div>
     </header>
 
